# PatchPilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-repair.yml  ci.yml
docs/showcase/: README.md  demo-report.md  demo-trace.json
docs/superpowers/specs/: 2026-07-11-patchpilot-v0.2-features-design.md
examples/: sample_issue.md
examples/eval_tasks/task_001/: expected_tests.txt  issue.md
examples/eval_tasks/task_001/repo/: calculator.py  test_calculator.py
examples/eval_tasks/task_002/: expected_tests.txt  issue.md
examples/eval_tasks/task_002/repo/: test_validator.py  validator.py
examples/eval_tasks/task_003/: expected_tests.txt  issue.md
examples/eval_tasks/task_003/repo/: ranges.py  test_ranges.py
examples/eval_tasks/task_004/: expected_tests.txt  issue.md
examples/eval_tasks/task_004/repo/: percent.py  test_percent.py
examples/sample_repo/: README.md  calculator.py  test_calculator.py
patchpilot/: __init__.py  __main__.py  cli.py  eval_runner.py  execution.py  git_workflow.py  issue_loader.py  models.py  patch_runner.py  pipeline.py  planner.py  repo_context.py  report_writer.py  security.py  test_runner.py  tracing.py
patchpilot/engines/: __init__.py  openhands_engine.py
tests/: test_cli.py  test_git_workflow.py  test_github_issues.py  test_hermetic_verification.py  test_issue_loader.py  test_patch_runner.py  test_pipeline_e2e.py  test_repair_strategies.py  test_repo_context.py  test_report_writer.py  test_security.py  test_test_runner.py
