[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot"
version = "0.2.0"
description = "PatchPilot: a test-verified autonomous coding agent built on the OpenHands Software Agent SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "haotian" }]
keywords = ["agent", "autonomous", "program-repair", "openhands"]
# The default heuristic engine is dependency-free (stdlib only).
dependencies = []

[project.optional-dependencies]
# Real agent engine backed by the OpenHands Software Agent SDK.
# Requires Python >= 3.13 and an LLM_API_KEY at runtime.
openhands = ["openhands-sdk", "openhands-tools"]

[project.scripts]
patchpilot = "patchpilot.cli:main"

[tool.setuptools.packages.find]
include = ["patchpilot*"]
