[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot"
version = "0.3.0"
description = "PatchPilot: a standalone, test-verified autonomous coding agent with zero runtime dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "haotian" }]
keywords = ["agent", "autonomous", "program-repair", "automated-testing"]
# Standard library only, by design.
dependencies = []

[project.scripts]
patchpilot = "patchpilot.cli:main"

[tool.setuptools.packages.find]
include = ["patchpilot*"]
